# OnlyCringe

./: README.md
FlaskVue/backend/: application.py
FlaskVue/backend/schemas/: create.sql
FlaskVue/backend/scripts/: install.sh  launch.sh
FlaskVue/backend/src/: application.py
FlaskVue/backend/tests/: test.rest
FlaskVue/frontend/: package-lock.json  package.json  vue.config.js
FlaskVue/frontend/debian@51.77.213.215/: index.html
FlaskVue/frontend/scripts/: launch.sh  prodSetup.sh  toProd.sh
FlaskVue/frontend/src/: main.js
RustReact/backend/docker/: docker-compose.yml
RustReact/docker/: docker-compose.yml
RustReact/docker/db/: Dockerfile
RustReact/docker/front/: Dockerfile
RustReact/docker/img/: Dockerfile
RustVue/: .gitignore
RustVue/backend/server/services/forum/: Cargo.toml
RustVue/backend/server/services/forum/src/routes/: delete.rs  mod.rs
RustVue/backend/server/services/forum/src/service/: mod.rs
RustVue/backend/server/services/forum/src/service/forum/: create.rs  mod.rs
RustVue/frontend/: package.json
backend/: .gitignore
backend/imgServer/: app.py
backend/server/: .env
backend/server/app/: Cargo.toml
backend/server/services/user/: Cargo.toml
backend/server/services/user/src/: data.rs  lib.rs
backend/server/services/user/src/routes/: delete.rs  get.rs  mod.rs  post.rs  put.rs
backend/server/services/user/src/service/: convert.rs  create.rs  delete.rs  friend.rs  get.rs  mod.rs  modify.rs  old.rs
backend/server/services/utils/: Cargo.toml
backend/server/services/utils/src/: api.rs  database.rs  encrypt.rs  jwt.rs  lib.rs
frontend/docker/: docker-compose.yml
scripts/docker/: clear_all.sh  launch.sh
(+149 files in other folders)
