[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = "0.5.1"
rocket = "0.5.0-rc.2"
OC_user = {path = "../services/user", version = "0.1.0"}
OC_forum = {path = "../services/forum", version = "0.1.0"}