[package]
name = "OC_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.139"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mysql = "22.2.0"
bcrypt = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.2"
jwt = "0.16.0"
reqwest = "0.11.11"