[package]
name = "OC_forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
OC_user = {path = "../user", version = "0.1.0"}
OC_utils = {path = "../utils", version = "0.1.0"}
serde = "1.0.139"
mysql = "22.2.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]